# tempo

./: .env.example  .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  Makefile  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/: CLAUDE.md  settings.json
.claude/commands/: coach-dashboard-decisions.md  coach-dashboard-macro.md  coach-dashboard-week.md  research-gap-fetch.md
.claude/skills/bootstrap-plan/: SKILL.md  preflight.py
.claude/skills/draft-race-plan/: SKILL.md  preflight.py
.claude/skills/goal-research/: SKILL.md
.claude/skills/ingest-research/: SKILL.md  preflight.py
.claude/skills/midpoint-review/: SKILL.md  preflight.py
.claude/skills/plan-training-week/: SKILL.md  preflight.py
.claude/skills/review-week/: SKILL.md  preflight.py
.githooks/: post-commit  pre-commit
athlete/: goals.yaml  injury-log.md  preferences.md  profile.yaml  race-calendar.yaml  strength-program.md
docs/: architecture.md
docs/user_stories/: 01-first-marathon.md  02-ironman-build.md  03-return-from-injury.md  04-weekly-snapshot.md  05-progress-and-adaptation.md  06-pivot-to-new-goal.md  07-non-race-goals.md  README.md
knowledge/: sources.yaml
knowledge/methodology/: decision-rules.md  friel-periodization.md  ironman-build-structure.md  phases.yaml  polarized-training.md  session-library.md
knowledge/methodology/session-library/: README.md  bike.md  brick.md  run.md  strength.md  swim.md
knowledge/nutrition/: athlete-tested.yaml  daily-fueling.md  gut-training.md  race-day.md  race-week-carb-load.md  session-fueling.md
mcp-servers/coach-db/: README.md  pyproject.toml
mcp-servers/coach-db/src/coach_db_mcp/: __init__.py  knowledge.py  memory.py  models.py  server.py  sessions.py  sql.py
mcp-servers/coach-db/tests/: test_knowledge.py  test_memory.py  test_milestone.py  test_server_smoke.py  test_sessions.py  test_sql.py
plans/2026-bike-build-12wk/: changelog.md  goal.yaml  plan.yaml  rationale.md
plans/2026-bike-build-12wk/weeks/: 2026-W18.md  2026-W19.md  2026-W20.md
plans/2027-half-ironman/: changelog.md  goal.yaml  plan.yaml  rationale.md
scripts/: install-hooks.sh  worktree-bd-sync.sh
src/tempo/: __init__.py  amend.py  athlete.py  briefs.py  calibration.py  check_in.py  cli.py  composition.py  db.py  decoupling.py  derive.py  diagnostics.py  display.py  embed.py  events.py  fragments.py  gap_search.py  goals.py  init_wizard.py  library_map.py  paths.py  patterns.py  plans.py  profile_init.py  push.py  queries.py  raw.py  refresh_prs.py  research.py  rules.py  status.py  sync.py  week_import.py  zones.py
src/tempo/dashboards/: __init__.py  common.py  decisions.py  macro.py  week.py
tests/: conftest.py  test_amend.py  test_athlete.py  test_briefs.py  test_calibration.py  test_check_in.py  test_cli.py  test_composition.py  test_dashboards_decisions.py  test_dashboards_macro.py  test_dashboards_week.py  test_db.py  test_decoupling.py  test_derive.py  test_diagnostics.py  test_disposability.py  test_embed.py  test_embed_memory.py  test_embed_sessions.py  test_fragments.py  test_gap_search.py  test_init_wizard.py  test_library_map.py  test_patterns.py  test_plans.py  test_profile_init.py  test_push.py  test_queries.py  test_raw.py  test_refresh_prs.py  test_research.py  test_research_gap_discovery.py  test_research_gap_execute.py  test_rules.py  test_status.py  test_sync.py  test_week_import.py  test_worktree_bd_sync.sh  test_zones.py
