[project]
name = "tempo"
version = "0.1.0"
description = "Local-first Ironman coaching agent, built on intervals.icu + Claude Code."
readme = "README.md"
authors = [
    { name = "Sean Koval", email = "seanmkoval@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
coach = "tempo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
# Populated per-phase. Keep the base project lean.
# phase-1 (sync/derive): requests, pydantic, typer, python-dateutil
# phase-2 (embed/vectors): fastembed, lancedb, pyyaml, markdown-it-py
# phase-3 (coach-db MCP): mcp, fastmcp
dev = []
